Temporarily changes the name of the package during development

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "slashid/laravel-slashid",
+    "name": "zsanmartin/laravel-slashid",
     "description": "SlashID integration package for Laravel.",
     "type": "library",
     "license": "MIT",
