--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,10 @@
             "email": "jose@josesanmartin.net"
         }
     ],
-    "require": {},
+    "require": {
+        "php": "^8.1",
+        "zsanmartin/slashid-php": "dev-master"
+    },
     "extra": {
         "laravel": {
             "providers": [
