--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,8 @@
         }
     ],
     "require-dev": {
-        "laravel/pint": "^1.14"
+        "laravel/pint": "^1.14",
+        "phpunit/phpunit": "^10.5"
     },
     "scripts": {
         "test-pint": "./vendor/bin/pint --test",
