--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,8 @@
     ],
     "require-dev": {
         "laravel/pint": "^1.14",
-        "phpunit/phpunit": "^10.5"
+        "phpunit/phpunit": "^10.5",
+        "laravel/framework": "^10"
     },
     "scripts": {
         "test-pint": "./vendor/bin/pint --test",
