--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "SlashId\\Laravel\\": "src/"
+            "SlashId\\Laravel\\": "src/",
+            "SlashId\\Test\\Laravel\\": "tests/unit/src/"
         }
     },
     "authors": [
@@ -41,6 +42,8 @@
     },
     "scripts": {
         "test-pint": "./vendor/bin/pint --test",
-        "test-pint-fix": "./vendor/bin/pint --test"
+        "test-pint-fix": "./vendor/bin/pint --test",
+        "test-phpunit": "vendor/bin/phpunit tests/unit/",
+        "test-phpunit-coverage": "vendor/bin/phpunit --coverage-html tests/coverage --coverage-filter src/ tests/unit/"
     }
 }
