--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "zsanmartin/laravel-slashid",
+    "name": "slashid/laravel",
     "description": "SlashID integration package for Laravel.",
     "type": "library",
     "license": "MIT",
@@ -16,7 +16,7 @@
     ],
     "require": {
         "php": "^8.1",
-        "zsanmartin/slashid-php": "dev-master"
+        "slashid/php": "dev-main"
     },
     "extra": {
         "laravel": {
@@ -31,7 +31,7 @@
     "repositories": [
         {
             "type": "vcs",
-            "url": "https://github.com/zsanmartin/slashid-php"
+            "url": "https://github.com/slashid/php"
         }
     ],
     "require-dev": {
