--- a/resources/scripts/user-migration.php.template
+++ b/resources/scripts/user-migration.php.template
@@ -1,1 +1,24 @@
 <?php
+
+use SlashId\Laravel\SlashIdUser;
+
+/** @var \Illuminate\Contracts\Auth\Authenticatable[] */
+$laravelUsers = {{ class }}::all();
+$slashIdUsers = [];
+foreach ($laravelUsers as $laravelUser) {
+    $slashIdUser = new SlashIdUser();
+    $slashIdUser
+        ->addEmailAddress($laravelUser->email)
+        // Uncomment if you want to set the phone number.
+        // ->addPhoneNumber($laravelUser->phone_number)
+        // Uncomment if you want to set groups.
+        // ->setGroups(['Editor'])
+        // Uncomment if you want to specify a region for the user.
+        // ->setRegion('us-iowa')
+        ->setAttributes([
+            'old_id' => $laravelUser->getAuthIdentifier(),
+            {{ attributes }}
+        ]);
+}
+
+return $users;
