--- a/resources/scripts/user-migration.php.template
+++ b/resources/scripts/user-migration.php.template
@@ -9,6 +9,7 @@ foreach ($laravelUsers as $laravelUser) {
     $slashIdUser = new SlashIdUser();
     $slashIdUser
         ->addEmailAddress($laravelUser->email)
+        ->setLegacyPasswordToMigate($laravelUser->getAuthPassword())
         // Uncomment if you want to set the phone number.
         // ->addPhoneNumber($laravelUser->phone_number)
         // Uncomment if you want to set groups.
@@ -19,6 +20,8 @@ foreach ($laravelUsers as $laravelUser) {
             'old_id' => $laravelUser->getAuthIdentifier(),
             {{ attributes }}
         ]);
+
+    $slashIdUsers[] = $slashIdUser;
 }
 
-return $users;
+return $slashIdUsers;
