--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,7 @@
         "test-pint": "./vendor/bin/pint --test",
         "test-pint-fix": "./vendor/bin/pint",
         "test-phpunit": "vendor/bin/phpunit tests/unit/",
-        "test-phpunit-coverage": "vendor/bin/phpunit --display-warnings --coverage-html tests/coverage --coverage-filter src/ tests/unit/",
+        "test-phpunit-coverage": "vendor/bin/phpunit --display-deprecations --display-warnings --coverage-html tests/coverage --coverage-filter src/ tests/unit/",
         "test-phpstan": "vendor/bin/phpstan analyse src -l 9"
     }
 }
