--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     ],
     "require": {
         "php": "^8.1",
-        "slashid/php": "dev-main#381f73bbcb2f9090751ada824bc4fdb5e0b9f8c6"
+        "slashid/php": "^1"
     },
     "extra": {
         "laravel": {
