--- a/composer.json
+++ b/composer.json
@@ -32,8 +32,8 @@
     "require-dev": {
         "laravel/pint": "^1.14",
         "phpunit/phpunit": "^10.5",
-        "laravel/framework": "^10",
-        "phpstan/phpstan": "^1.10"
+        "phpstan/phpstan": "^1.10",
+        "laravel/framework": "^11"
     },
     "scripts": {
         "test-pint": "./vendor/bin/pint --test",
